# SpendLens

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CREDEX_AI_SPEND_AUDIT_PROJECT_REPORT.md  DEVLOG.md  ECONOMICS.md  GTM.md  LANDING_COPY.md  LICENSE  METRICS.md  Makefile  PRICING_DATA.md  PROMPTS.md  README.md  REFLECTION.md  TESTS.md  USER_INTERVIEWS.md  check_files.py  docker-compose.dev.yml  docker-compose.yml  plan.md  run.md
backend/: .dockerignore  Dockerfile.dev  alembic.ini  docker-compose.yml  logging.yaml  pyproject.toml  pytest-coverage.ini  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  exception_handlers.py  exceptions.py  middleware.py  security.py
backend/app/db/: connection_pool.py  init_db.py  postgres.py  redis_client.py  session.py  transaction_manager.py
backend/app/models/: abuse_log.py  audit.py  audit_tool_entry.py  base.py  email_event.py  lead.py  mixins.py  tool_pricing.py
backend/app/monitoring/: custom_metrics.py  prometheus.py
backend/app/repositories/: abuse_repository.py  audit_repo.py  audit_repository.py  email_event_repository.py  lead_repo.py  lead_repository.py  pricing_repository.py
backend/app/security/: csrf.py  honeypot.py  rate_limiter.py  share_token.py  xss_protection.py
backend/migrations/: env.py
backend/tests/e2e/: test_full_audit_flow.py  test_high_savings_flow.py  test_optimal_spend_flow.py  test_share_flow.py
backend/tests/fixtures/: sample_audit_responses.py  sample_leads.py  sample_pricing_data.py  (+1 more)
(+201 files in other folders)
