[tool.poetry]
name = "credex-backend"
version = "0.1.0"
description = "FastAPI backend for Credex AI Spend Audit"
authors = ["Credex <hello@credex.co>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
redis = "^5.0.1"
anthropic = "^0.19.1"
resend = "^0.8.0"
httpx = "^0.26.0"
prometheus-client = "^0.19.0"
python-multipart = "^0.0.9"
email-validator = "^2.1.0"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.2.0"
ruff = "^0.2.1"
mypy = "^1.8.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
